apps/nextcloud/07.database-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-db-deployment
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-db
  template:
    metadata:
      labels:
        app: nextcloud-db
    spec:
      containers:
        - name: nextcloud-db-deployment
          image: mariadb:10.6.8
          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "400m"
          volumeMounts:
          - name: database-data
            mountPath: /var/lib/mysql
      volumes:
      - name: database-data
        persistentVolumeClaim:
          claimName: database-data
