apps/nextcloud/08.database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db-service
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  ports:
  - protocol: TCP
    port: 3306
  selector:
    app: nextcloud-db
