apps/nextcloud/10.server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  ports:
  - protocol: TCP
    port: 80
  selector:
    app: nextcloud-server
